--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@
     font-family: Book Antiqua;
     font-size: 1.3em;
     text-align: left;
+    margin-top:-21px;
   }
 
   .settings_screen{
@@ -1096,7 +1097,8 @@
   .parallelogram_lowercase_selected{
 
     position: absolute;
-    margin-top:-18px;
+    /*margin-top:-18px;*/
+    top: -19px;
     bottom:-1.5px;
     left:4px;
     padding:0px;
@@ -1120,7 +1122,8 @@
 
   .parallelogram_lowercase_unselected{
     position: absolute;
-    margin-top:-18px;
+    top: -19px;
+    /*margin-top:-18px;*/
     left:4px;
     padding:0px;
     width: 90px;
@@ -1141,7 +1144,7 @@
 
   .parallelogram_UPPERCASE_selected{
     position: absolute;
-    margin-top:-18px;
+    /*margin-top:-18px;*/
     left:4px;
     padding:0px;
     width: 110px;
@@ -1164,7 +1167,8 @@
   .parallelogram_UPPERCASE_unselected{
     bottom:-1.5px;
     position: absolute;
-    margin-top:-18px;
+    top: -19px;
+    /*margin-top:-18px;*/
     left:4px;
     padding:0px;
     width: 110px;
@@ -1305,6 +1309,7 @@
   .checkbox_on{
     display: relative;
     position: absolute;
+    top:2px;
     left:0px;
     padding: 0px;
     font-weight: bold;
@@ -1319,8 +1324,10 @@
   }
 
   .checkbox_outline{
-    display: relative;
-    position: absolute;
+    /*display: relative;*/
+    /*position: absolute;*/
+    /*top:-5px;*/
+    margin-top:8px;
     width:10px;
     height:10px;
     bottom:4px;
