--- a/css/style.css
+++ b/css/style.css
@@ -976,6 +976,7 @@
     font-family: Book Antiqua;
     font-size: 1.3em;
     text-align: left;
+    width:100%;
 
   }
 
@@ -1011,6 +1012,13 @@
     border: 1.5px solid #808080;
     color: #BFBFBF;
     width: 50%;
+    /* code below makes it so text is not selectable */
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
   }
   .left_dock_input_class{
     padding-bottom:20px;
