--- a/css/style.css
+++ b/css/style.css
@@ -1238,6 +1238,45 @@
       user-select: none;
   }
 
+  .swatch_outline_input{
+    font-size:1.6em;
+    height:10px;
+    /*left:1px;*/
+    top:-4.5px;
+    /*padding-right:3px;*/
+    color:#000000;
+    /*border:3px solid #000000;*/
+    z-index: 2;
+    position:absolute;
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+  }
+
+  .swatch_input_white_column{
+    position:absolute;
+    z-index: 0;
+    background-color:#FFFFFF;
+    height:80px;
+    width:30px;
+    margin:0px;
+    padding:0px;
+    margin-top:-26px;
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+  }
+
+  .color_picker_tool {
+    margin-top: 1rem;
+  }
+
   .lowercase_toggle{
     display:block;
     text-align: center;
