--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,30 @@
       user-select: none;
   }
 
+  /* like, state 2, where it appears, but this version is instant*/
+  .top_docker_state3{
+    z-index: -1;
+    /*text-align: center;*/
+    margin:0px;
+    padding:0px;
+    /*transform: translateX(10%);*/
+    width:100%;
+    height:700px;
+    min-width:600px;
+    position: absolute;
+    /*border: solid 2px white;*/
+    display: block;
+    padding-top:25px;
+    top:0px;
+    /* code below makes it so text is not selectable */
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+  }
+
   /* ######################################################################## */
   /* ######################################################################## */
   /* ######################################################################## */
