--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-<!-- CSS -->
 <style>
 
   .arrow_button_class {
@@ -1438,6 +1437,27 @@
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
-
   }
+
+  .bookmark_class {
+    display: inline-block;     /* necessary for spans */
+    width: 60px;               /* circle width */
+    height: 60px;              /* circle height */
+    line-height: 60px;         /* centers text vertically */
+    text-align: center;        /* centers text horizontally */
+    border-radius: 50%;        /* makes it a circle */
+    border: 2px solid black;
+    background-color: white;
+    color: white;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
+
+  .bookmark_class img {
+    padding-top:3px;
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+}
+
 </style>
