--- a/css/style.css
+++ b/css/style.css
@@ -1287,8 +1287,6 @@
     width:30px;
     margin:0px;
     padding:0px;
-    
-    
     -webkit-touch-callout: none;
       -webkit-user-select: none;
       -khtml-user-select: none;
@@ -1443,12 +1441,12 @@
     /*border-radius: 6%; */
     /*border:2px solid red;*/
     /*background-color: red;*/
-    width:80%;
+    width:71%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;          /* allow multiple rows */
     justify-content: center;  /* center items horizontally */
-    gap: 10px;  
+    gap: 30px;  
     flex: 0 0 calc(10% - 10px); /* 10 across with gap */
   }
 
@@ -1471,28 +1469,56 @@
   }
 
   .bookmark_icon_case {
-    margin-top: 3px;
+    /*margin-top: 3px;*/
     width: 40px;
     height: 40px;
     display: flex;
     justify-content: center;      /* Center icon inside case */
     align-items: center;
     background-color: white;
+    border: 1.5px solid black;
     
   }
 
   .bookmark_icon {
-    width: 40px;
-    height: 40px;
-    border: 2px solid black;
+    width: 31px;
+    height: 31px;
+    
   }
 
   .bookmark_text {
+    margin-top: 43px;
+    position: absolute;
     font-size: 12px;
     text-align: center;
     color: yellow;
   }
 
+  .edit_bookmarks{
+    position:absolute; 
+    right:0px;
+    margin-top:-25px;
+    margin-right: 12%;
+    color:yellow;
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
+  }
+
+  .quick_launch_bookmark_settings_class{
+    position: absolute;
+    display:none;
+    height:680px;
+    width:70%;
+    margin-left: 15%;
+    margin-top:5%;
+    border: 1px solid black;
+    color:white; 
+  }
  
 
 </style>
