added circadian and random color themes changes

--- a/css/style.css
+++ b/css/style.css
@@ -906,6 +906,7 @@
     border: 1.5px solid #808080;
     color: #BFBFBF;
     width:65%;
+    height:480px;
     margin-left:10%;
     margin-right:10%;
     max-width: 850px;
